# tajo

./: .gitignore  CHANGES  README.md  Tajo_for_CDH_5.patch  pom.xml
tajo-catalog/tajo-catalog-common/: pom.xml
tajo-cli/: pom.xml
tajo-client/: pom.xml
tajo-client/src/main/proto/: ClientProtos.proto  QueryMasterClientProtocol.proto  (+1 more)
tajo-common/: pom.xml
tajo-core/: pom.xml
tajo-dist/: pom.xml
tajo-jdbc/: pom.xml
tajo-jitvec-server/: pom.xml
tajo-jitvec-tests/: pom.xml
tajo-lightning/: build.gradle  settings.gradle
tajo-lightning/native/: Cargo.toml
tajo-lightning/native/conf/: architecture.md  config.toml
tajo-lightning/native/src/: lib.rs
tajo-lightning/native/src/api_service/: README.md  mod.rs  response.rs
tajo-lightning/native/src/common/: assert.rs  clock.rs  config.rs  consts.rs  err.rs  messages.rs  mod.rs  service.rs
tajo-lightning/native/src/driver/: README.md  mod.rs
tajo-lightning/native/src/http_client/: README.md  mod.rs
tajo-lightning/native/src/local-cluster/: cluster.rs  mod.rs
tajo-lightning/native/src/node_service/: mod.rs
tajo-lightning/native/src/util/: file.rs  mod.rs  str.rs
tajo-lightning/native/test-cluster/: test-cluster.rs
tajo-native-kernel/: pom.xml
tajo-project/: pom.xml
tajo-rpc/: pom.xml
tpch_query/: q1.tajo  q10.tajo  q11.tajo  q12.tajo  q13.tajo  q14.tajo  q15.tajo  q16.tajo  q17.tajo  q18.tajo  q19.tajo  q20.tajo  q21.tajo  q22.tajo  q2_minimum_cost_supplier.tajo  q3_shipping_priority.tajo  q4_order_priority.tajo  q5_local_supplier_volume.tajo  q6.tajo  q7.tajo  q8.tajo  q9.tajo
(+475 files in other folders)
