[package]
name = "tajo-lightning"
version = "0.1.0"
authors = ["Hyunsik Choi <hyunsik@apache.org"]

[[bin]]
name = "launcher"
path = "src/bin/launcher.rs"

[lib]
name = "lightning"
path = "src/lib.rs"

[dependencies]
clap            = "2.26.0"
env_logger      = "0.4.3"
futures         = "0.1.14"
hyper           = "0.11.2"
lazy_static     = "0.2.9"
log             = "0.3.8"
protobuf        = "1.*"
rocket          = "0.3.3"
rocket_contrib  = "0.3.3"
rocket_codegen  = "0.3.3"
serde           = "1.0.14"
serde_derive    = "1.0.3"
serde_json      = "1.0.3"
tokio-core      = "0.1.9"
toml            = "0.4.5"
uuid            = { version="0.5.1", features = ["serde", "v4"] }